--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@ h2 {
   grid-template-columns: repeat(2, 1fr);
   padding: 133.333px 85.333px 133.333px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 32px;
   background-color: var(--bg-shade);
 }
@@ -200,7 +200,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 32px;
+  gap: 50px;
 }
 .hero--section--content {
   display: flex;
@@ -226,13 +226,18 @@ h2 {
   font-size: 24px;
   font-weight: 400;
   line-height: 36px;
+  text-align: justify;
 }
 .hero--section--img {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .hero--section--img > img {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
+  object-fit: cover;
 }
 /* Hero Section Style Ends */
 
